--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,12 +2,23 @@ body, html {
   width: 100%;
   height: 100%;
   margin: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 600;
 }
 
 body {
   display: flex;
   flex-direction: column;
 }
+
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
+    border: 2px solid #3e4836;
+}
+
 
 .footer,
 .header {
@@ -25,9 +36,89 @@ body {
 }
 
 .todo-list {
-  height: min(100vh, max(30rem, 90%));
-  width: min(100vw, max(30rem, 90%));
+  height: min(100vh, max(30rem, 80%));
+  width: min(100vw, max(30rem, 80%));
   background-color: #d9b28a;
   border-radius: 8pt;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 
+.new-task {
+  width: 90%;
+  background-color: #f6f2c0;
+  border-radius: 5pt;
+  padding: 3pt;
+}
+
+.second-row,
+.first-row {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 45pt;
+}
+
+.third-row {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  height: 45pt;
+  padding-right: 2pt;
+}
+
+.title {
+  width: 65%;
+}
+
+.due-date {
+  width: 30%;
+}
+
+.description {
+  width: 80%;
+}
+
+.priority-select {
+  width: 20%;
+}
+
+.new-task-btn-container {
+  width: 90%;
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+#new-task-btn,
+#submit {
+  color: #f6f2c0;
+  height: 25pt;
+  width: 60pt;
+  background: #3e4836;
+  text-align: center;
+  font-weight: 600;
+  padding-left: 0;
+}
+
+
+button,
+select,
+input {
+  background-color: #d9b28a;
+  border: 0;
+  border-radius: 4px;
+  height: 25pt;
+  padding: 0;
+  padding-left: 5pt;
+  width: 95%;
+}
+
+.hidden {
+  visibility: hidden;
+  height: 0;
+}
